# VideoVault

./: .gitignore  .npmrc  README.md  components.json  create_cover_images.sh  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cover.rs  folder.rs  lib.rs  main.rs  video.rs  volume.rs
src/components/FolderDisplay/: FolderDisplay.css  FolderGrid.tsx  FolderNode.tsx
src/components/MainContent/: Breadcrumb.tsx  MainContent.css  MainContent.tsx  ViewControls.tsx
src/components/Modals/: AddFolderModal.tsx  Modals.css  PreviewModal.tsx
src/components/Sidebar/: FolderList.tsx  HistorySection.tsx  Sidebar.css  Sidebar.tsx
src/components/VideoDisplay/: VideoCard.tsx  VideoDisplay.css  VideoGrid.tsx
src/components/magicui/: animated-grid-pattern.tsx  lens.tsx  rainbow-button.tsx  retro-grid.tsx  shimmer-button.tsx
src/hooks/: useCoverPaths.ts  useCustomFolderCovers.ts  useDirectoryScan.ts  useFolderHistory.ts  useRootFolders.ts  useSortData.ts  useVideoPlayer.ts
src/types/: index.ts
src/utils/: formatters.ts
